--- a/static/css/style.css
+++ b/static/css/style.css
@@ -45,6 +45,7 @@ span {
     -webkit-font-smoothing: antialiased;
     -webkit-text-stroke-width: 0.2px;
     -moz-osx-font-smoothing: grayscale;
+    font-weight: 600;
 }
 
 * {
@@ -71,6 +72,7 @@ h1, h2, h3, h4, h5 {
     padding-left: 0px;
     font-size: 16px;
     line-height: 2;
+    color: black;
 }
 
 .stack-list {
@@ -138,6 +140,7 @@ footer {
 p {
     line-height: 1.5;
     font-size: small;
+    color: black;
 }
 
 progress {
@@ -192,6 +195,7 @@ progress::-moz-progress-value {
 .left-label {
     display: inline-block;
     width: 120px;
+    color: black;
 }
 
 .portrait {
