--- a/static/css/style.css
+++ b/static/css/style.css
@@ -139,8 +139,8 @@ footer {
 }
 
 p {
-    line-height: 1.5;
-    font-size: small;
+    line-height: 1.7;
+    font-size: medium;
     color: black;
 }
 
